<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent" 
              android:layout_height="match_parent">
    <TextView android:text="@string/threading_basics_intro" 
              android:gravity="center_horizontal"
              android:layout_width="match_parent"  
              android:layout_height="wrap_content" 
              android:layout_marginBottom="20dp"
              android:textAppearance="?android:attr/textAppearanceMedium" />
    <Button android:text="@string/separate_class_label" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:onClick="separateClass"/>
    <Button android:text="@string/implements_interface_label" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:onClick="implementsInterface"/>
    <Button android:text="@string/inner_class_label" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:onClick="innerClass"/>
</LinearLayout>
