<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_window"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" 
                  android:layout_height="wrap_content">
        <TextView android:text="@string/url_prompt"
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content"/>
        <EditText android:id="@+id/image_to_download" 
                  android:text="@string/sample_image"
                  android:textSize="@dimen/urls_input_size"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" 
                  android:inputType="textUri">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <Button android:text="@string/simple_image_downloader_button_text"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:onClick="downloadImage"/>
</LinearLayout>
